# range-experts

./: .gitmodules  README.md
inference/: CMakeLists.txt  README.md  package.xml  setup.cfg
inference/bev_fusion/: bev_fusion_node.py  pybev.py
inference/config/: bevfusion.param.yaml
inference/include/: bevfusion_node.hpp
inference/launch/: bevfusion.launch.xml
inference/model/resnet50/: bevfusion-det.pth  camera.backbone.onnx  fuser.onnx
inference/model/resnet50int8/: bevfusion_ptq.pth  camera.backbone.onnx  fuser.onnx  head.bbox.onnx  lidar.backbone.xyz.onnx
inference/model/swint/: camera.backbone.onnx  fuser.onnx  lidar.backbone.xyz.onnx
inference/scripts/: build_trt_engine.sh  init.sh
inference/src/: bevfusion_node.cpp  main.cpp  python.cpp
inference/src/bevfusion/: bevfusion.cpp  bevfusion.hpp
inference/src/test/: test_param.cpp
training/: .gitlab-ci.yml  README.md  environment.yml
training/mmdetection3d/: setup.py
training/mmdetection3d/mmdet3d/datasets/: __init__.py  av2_dataset.py
training/mmdetection3d/mmdet3d/datasets/transforms/: __init__.py  loading.py  transforms_3d.py
training/mmdetection3d/mmdet3d/models/voxel_encoders/: voxel_encoder.py
training/mmdetection3d/projects/BEVFusion/: setup.py
training/mmdetection3d/projects/BEVFusion/bevfusion/: bevfusion.py  depth_lss.py  transfusion_head.py  utils.py
training/mmdetection3d/projects/BEVFusion/bevfusion/ops/bev_pool/: bev_pool.py
training/mmdetection3d/projects/BEVFusion/bevfusion/ops/bev_pool/src/: bev_pool.cpp  bev_pool_cuda.cu
training/mmdetection3d/projects/BEVFusion/bevfusion/ops/voxel/: voxelize.py
training/mmdetection3d/projects/BEVFusion/bevfusion/ops/voxel/src/: voxelization_cuda.cu
training/mmdetection3d/projects/BEVFusion/configs/: bevfusion_lidar-cam_150m_voxel0075_second_secfpn_8xb4-cyclic-20e_nus-3d.py  bevfusion_lidar-cam_r18.py  bevfusion_lidar-cam_r50.py  bevfusion_lidar-cam_st_ch.py  bevfusion_lidar-cam_swin_tiny.py  bevfusion_lidar-cam_swin_tiny_ef.py  bevfusion_lidar-cam_voxel0075_second_secfpn_8xb4-cyclic-20e_nus-3d.py  bevfusion_lidar_150m_voxel0075_second_secfpn_8xb4-cyclic-20e_nus-3d.py  bevfusion_lidar_150m_voxel0075_second_secfpn_8xb4-cyclic-20e_nus-3d_coarse.py  bevfusion_lidar_donut_crop_100m_voxel0075_second_secfpn_8xb4-cyclic-20e_nus-3d.py  bevfusion_lidar_voxel0075_second_secfpn_8xb4-cyclic-20e_nus-3d.py
training/mmdetection3d/requirements/: range_of_experts.txt
training/mmdetection3d/tools/: create_data.py  train.py
training/mmdetection3d/tools/dataset_converters/: av2_converter.py  create_gt_database.py  update_infos_to_v2.py
training/nuscenes-devkit/python-sdk/nuscenes/eval/detection/: algo.py  config.py  data_classes.py  evaluate.py
training/nuscenes-devkit/python-sdk/nuscenes/eval/detection/configs/: detection_cvpr_2019.json
training/scripts/notebooks/: distance_based_voxelization.ipynb  distance_conditional_sampling.ipynb  distance_distributions.ipynb  evaluation_metrics.ipynb
