<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>bev_fusion</name>
	<version>0.0.0</version>
	<description>BEVFusion ROS node</description>
	<maintainer email="e@gorelik.de">egorelik</maintainer>
	<maintainer email="yuan.xu@dai-labor.de">Yuan Xu</maintainer>
	<license>TODO: License declaration</license>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>ament_cmake_auto</buildtool_depend>
  	<buildtool_depend>ament_cmake_python</buildtool_depend>
  	<!-- <build_depend>autoware_cmake</build_depend> -->
    
	<depend>rclcpp</depend>
	<depend>rclcpp_components</depend>
	<depend>rclpy</depend>
	<depend>sensor_msgs</depend>
	<depend>message_filters</depend>
  	<depend>pcl_ros</depend>
	<depend>cv_bridge</depend>
	<depend>tf2</depend>
	<depend>tf2_eigen</depend>
  	<depend>autoware_auto_perception_msgs</depend>
    <depend>tier4_autoware_utils</depend>
    
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>